[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Codes/CameraPosition.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 144, 24 )

[node name="CameraPosition" type="Area2D"]
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CamPos" type="Position2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_CameraPosition_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_CameraPosition_body_exited"]
